Prevent more link from wrapping to new line

--- a/custom-vivo/webapp/src/main/webapp/themes/wilma/css/nora.css
+++ b/custom-vivo/webapp/src/main/webapp/themes/wilma/css/nora.css
@@ -143,7 +143,7 @@ body {
   top: 30px;
   color: white;
   font-size: 0.8em;
-  width:600px;
+  width:800px;
 }
 .displace2 a {
   color: #24ddff /* TODO change this once we figure out the header background */ 
